--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.42.3'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.3'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-offline-v8:0.6.0'
 
 }
