--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    package="com.example.loginjourneysharing">
+    package="com.tcd.yaatra">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -20,13 +20,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.FindActivity"></activity>
-        <activity android:name=".activities.MapActivity" />
-        <activity android:name=".activities.DirectActivity" />
-        <activity android:name=".activities.UserActivity" />
-        <activity android:name=".activities.DailyCommuteActivity" />
+        <activity android:name="com.tcd.yaatra.activities.FindActivity"></activity>
+        <activity android:name="com.tcd.yaatra.activities.MapActivity" />
+        <activity android:name="com.tcd.yaatra.activities.DirectActivity" />
+        <activity android:name="com.tcd.yaatra.activities.UserActivity" />
+        <activity android:name="com.tcd.yaatra.activities.DailyCommuteActivity" />
         <activity
-            android:name=".activities.LoginActivity"
+            android:name="com.tcd.yaatra.activities.LoginActivity"
             android:label="Journey Sharing Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name="com.tcd.yaatra.activities.RegisterActivity" />
     </application>
 
 </manifest>
