--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.tcd.yaatra.activities.FindActivity"></activity>
-        <activity android:name="com.tcd.yaatra.activities.MapActivity" />
-        <activity android:name="com.tcd.yaatra.activities.DirectActivity" />
-        <activity android:name="com.tcd.yaatra.activities.UserActivity" />
-        <activity android:name="com.tcd.yaatra.activities.DailyCommuteActivity" />
+        <activity android:name="com.tcd.yaatra.ui.activities.FindActivity"></activity>
+        <activity android:name="com.tcd.yaatra.ui.activities.MapActivity" />
+        <activity android:name="com.tcd.yaatra.ui.activities.DirectActivity" />
+        <activity android:name="com.tcd.yaatra.ui.activities.UserActivity" />
+        <activity android:name="com.tcd.yaatra.ui.activities.DailyCommuteActivity" />
         <activity
-            android:name="com.tcd.yaatra.activities.LoginActivity"
+            android:name="com.tcd.yaatra.ui.activities.LoginActivity"
             android:label="Journey Sharing Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.tcd.yaatra.activities.RegisterActivity" />
+        <activity android:name="com.tcd.yaatra.ui.activities.RegisterActivity" />
     </application>
 
 </manifest>
