--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:name=".App"
         android:usesCleartextTraffic="true">
         <activity android:name="com.tcd.yaatra.ui.activities.FindActivity"></activity>
         <activity android:name="com.tcd.yaatra.ui.activities.MapActivity" />
