--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.GetSetDestination"></activity>
+        <activity android:name=".activities.LoginActivity"></activity>
         <activity android:name=".activities.FindActivity" />
         <activity android:name=".activities.MapActivity" />
         <activity android:name=".activities.DirectActivity" />
         <activity android:name=".activities.UserActivity" />
         <activity android:name=".activities.DailyCommuteActivity" />
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.GetSetDestination"
             android:label="Journey Sharing Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
