--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name="com.tcd.yaatra.ui.activities.MapBoxActivity" />
         <activity android:name="com.tcd.yaatra.ui.activities.DailyCommuteListActivity" />
         <activity android:name="com.tcd.yaatra.ui.activities.DailyCommuteActivity" />
+        <activity android:name="com.tcd.yaatra.ui.activities.NavigationDrawerActivity"  android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="com.tcd.yaatra.ui.activities.LoginActivity"
             android:label="Journey Sharing Login">
