fixing launch activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ui.activities.LoginActivity" />
         <activity android:name=".ui.activities.PeerToPeerActivity" />
         <activity android:name=".ui.activities.MapActivity" />
         <activity android:name=".ui.activities.MapBoxActivity" />
@@ -30,8 +31,8 @@
             android:name=".ui.activities.NavigationDrawerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.activities.LoginActivity"
-            android:label="Journey Sharing Login">
+            android:name=".ui.activities.LaunchActivity"
+            android:label="Yaatra">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
