--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.42.3'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.3'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-spatial', version: '8.2.0'
 
 //navigation
 
