--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".ui.activities.LoginActivity" />
         <activity android:name=".ui.activities.PeerToPeerActivity" />
-        <activity android:name=".ui.activities.MapActivity" />
+        <activity android:name=".ui.activities.MapFragment" />
         <activity android:name=".ui.activities.RouteInfo" />
         <activity android:name=".ui.activities.MapBoxInputFragment" />
         <activity android:name=".ui.activities.DailyCommuteListActivity" />
