--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,8 @@ dependencies {
     implementation "androidx.drawerlayout:drawerlayout:1.0.0"
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    //Recycler view
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
