--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,12 +25,14 @@
         <activity android:name=".ui.activities.PeerToPeerActivity" />
         <activity android:name=".ui.activities.MapFragment" />
         <activity android:name=".ui.activities.RouteInfo" />
+        <activity android:name=".ui.activities.DailyCommuteMapFragment" />
         <activity android:name=".ui.activities.MapBoxInputFragment" />
         <activity android:name=".ui.activities.DailyCommuteListActivity" />
         <activity android:name=".ui.activities.DailyCommuteActivity" />
         <activity android:name=".ui.activities.MenuContainerActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.LaunchActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="Yaatra">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
