--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,5 +92,6 @@ dependencies {
     //Recycler view
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0-beta01'
 
 }
