--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'org.mockito:mockito-core:2.19.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.19.0'
 
     //MapBox dependencies
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
@@ -103,5 +105,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
     testImplementation 'androidx.test:core:1.0.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
 
 }
