--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,16 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".ui.fragments.CreateDailyCommuteFragment"></activity>
         <activity android:name=".ui.fragments.DailyFragment"></activity>
-        <activity android:name=".ui.activities.LoginActivity" />
-        <activity android:name=".ui.activities.PeerToPeerActivity" />
-        <activity android:name=".ui.activities.MapFragment" />
-        <activity android:name=".ui.activities.RouteInfo" />
-        <activity android:name=".ui.activities.DailyCommuteMapFragment" />
-        <activity android:name=".ui.activities.UserRatingActivity"/>
-        <activity android:name=".ui.activities.MapBoxInputFragment" />
+        <activity android:name=".ui.activities.LoginActivity"
+            android:label="Yaatra Login"/>
+        <activity android:name=".ui.activities.PeerToPeerActivity"
+            android:label="Ad-Hoc Commute Locate Peers"/>
+        <activity android:name=".ui.activities.MapFragment"/>
+        <activity android:name=".ui.activities.RouteInfo"
+            android:label="Route Information"/>
+        <activity android:name=".ui.activities.DailyCommuteMapFragment"/>
+        <activity android:name=".ui.activities.UserRatingActivity"
+            android:label="Rating"/>
         <activity
             android:name=".ui.activities.MenuContainerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -43,7 +46,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.RegisterActivity" />
+        <activity android:name=".ui.activities.RegisterActivity"
+            android:label="Yaatra Registration"/>
     </application>
 
 </manifest>
