--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,24 @@ dependencies {
     testImplementation 'androidx.test:core:1.0.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
 
+    // offline maps
+    implementation 'com.jjoe64:graphview:4.2.2'
+
+    implementation(group: 'com.graphhopper', name: 'graphhopper-core', version: '0.13.0') {
+        exclude group: 'com.google.protobuf', module: 'protobuf-java'
+        exclude group: 'org.openstreetmap.osmosis', module: 'osmosis-osm-binary'
+        exclude group: 'org.apache.xmlgraphics', module: 'xmlgraphics-commons'
+    }
+
+    implementation 'org.mapsforge:vtm:0.12.0'
+    implementation 'org.mapsforge:vtm-android:0.12.0'
+    implementation 'org.mapsforge:vtm-android:0.12.0:natives-armeabi'
+    implementation 'org.mapsforge:vtm-android:0.12.0:natives-armeabi-v7a'
+    implementation 'org.mapsforge:vtm-android:0.12.0:natives-arm64-v8a'
+    implementation 'org.mapsforge:vtm-android:0.12.0:natives-x86'
+    implementation 'org.mapsforge:vtm-android:0.12.0:natives-x86_64'
+    implementation 'org.mapsforge:vtm-jts:0.12.0'
+    implementation 'org.mapsforge:vtm-themes:0.12.0'
+
+
 }
