--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,5 +106,6 @@ dependencies {
 
     testImplementation 'androidx.test:core:1.0.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
