--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="Yaatra Login"/>
         <activity android:name=".ui.fragments.PeerToPeerFragment"/>
         <activity android:name=".ui.fragments.MapFragment"/>
-        <activity android:name=".ui.activities.RouteInfo"
+        <activity android:name=".ui.fragments.RouteInfoFragment"
             android:label="Route Information"/>
         <activity android:name=".ui.activities.DailyCommuteMapFragment"/>
         <activity android:name=".ui.activities.UserRatingActivity"
