--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.tcd.yaatra.CustomTestRunner"
     }
     buildTypes {
         release {
@@ -107,5 +107,13 @@ dependencies {
     testImplementation 'androidx.test:core:1.0.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.3'
+    testImplementation 'androidx.test:core:1.0.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    androidTestAnnotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
 
 }
