--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,10 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    def retrofit_version = "2.4.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     //volley dependencies
     implementation 'com.android.volley:volley:1.1.1'
@@ -85,6 +86,10 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-core:2.19.0'
     androidTestImplementation 'org.mockito:mockito-android:2.19.0'
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
     //MapBox dependencies
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.42.3'
@@ -92,8 +97,7 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
     implementation group: 'org.apache.lucene', name: 'lucene-spatial', version: '8.2.0'
 
-//navigation
-
+    //navigation
     implementation "androidx.navigation:navigation-fragment:2.2.1"
     implementation "androidx.navigation:navigation-ui:2.2.1"
     implementation "androidx.drawerlayout:drawerlayout:1.0.0"
@@ -104,15 +108,18 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
+
+    //retrofit mock lib
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit-mock
+    testImplementation group: 'com.squareup.retrofit2', name: 'retrofit-mock', version: '2.2.0'
+    testImplementation 'com.jraska.livedata:testing:1.1.2'
+
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'androidx.test:core:1.0.0'
+
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     debugImplementation 'androidx.fragment:fragment-testing:1.2.3'
-    testImplementation 'androidx.test:core:1.0.0'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     androidTestAnnotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
 
