--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity android:name=".ui.fragments.RouteInfoFragment"
             android:label="Route Information"/>
         <activity android:name=".ui.activities.DailyCommuteMapFragment"/>
-        <activity android:name=".ui.activities.UserRatingActivity"
+        <activity android:name=".ui.fragments.UserRatingFragment"
             android:label="Rating"/>
         <activity
             android:name=".ui.activities.MenuContainerActivity"
